# mcmc-complete-guide

./: .gitignore  CLAUDE.md  README_DETAILED.md  chapter1_mcmc_basics.ipynb  chapter2_metropolis_hastings.ipynb  chapter3_gibbs_sampling.ipynb  chapter4_convergence_diagnostics.ipynb  chapter5_practical_applications.ipynb  chapter6_advanced_mcmc.ipynb  chapter6_hamiltonian_monte_carlo.ipynb  chapter7_advanced_mcmc.ipynb  mcmc_complete_guide.md  pyproject.toml
.claude/: settings.local.json
docs/: hmc_comprehensive_guide.md  mcmc_complete_guide.md  mcmc_new_content1.md  mcmc_new_content2.md  mcmc_text_base.md
